Setting max-width for posts to avoid overflow

--- a/assets/output.css
+++ b/assets/output.css
@@ -662,3 +662,8 @@ ol {
   width: 75px;
   height: auto;
 }
+
+.post-body {
+  display: inline-block;
+  max-width: 100%;
+}
